--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -24,3 +24,29 @@ webhooks:
     - UPDATE
     resources:
     - machinemetadata
+
+---
+apiVersion: admissionregistration.k8s.io/v1beta1
+kind: ValidatingWebhookConfiguration
+metadata:
+  creationTimestamp: null
+  name: validating-webhook-configuration
+webhooks:
+- clientConfig:
+    caBundle: Cg==
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-x-cluster-x-k8s-io-v1alpha1-machinemetadata
+  failurePolicy: Fail
+  name: vmachinemetadata.kb.io
+  rules:
+  - apiGroups:
+    - x-cluster.x-k8s.io
+    apiVersions:
+    - v1alpha1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - machinemetadata
